# reqtrace

./: .gitignore  .gitmessage  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: auto-tag.yml  ci.yml  docs.yml  publish.yml
api/cli/: index.html
api/coverage/: index.html
api/exchange/: index.html
api/models/: index.html
api/parser/: index.html
api/scanner/: index.html
api/validate/: index.html
docs/: index.md
docs/api/: cli.md  coverage.md  exchange.md  models.md  parser.md  scanner.md  validate.md
docs/report/: index.html  timeline.html
docs/report/assets/: style.css
docs/report/requirements/: REQ-CLI.html  REQ-GRAPH.html  REQ-PARSE.html  REQ-SCAN-DIR.html  REQ-SCAN-REGEX.html  SYS-CI.html  SYS-REQ.html  SYS-SCAN.html  index.html
report/: index.html
report/assets/: style.css
report/requirements/: REQ-CLI.html  REQ-EXCHANGE-EXPORT.html  REQ-EXCHANGE-IMPORT.html  REQ-GRAPH.html  REQ-PARSE.html  REQ-SCAN-DIR.html  REQ-SCAN-FILE.html  REQ-SCAN-REGEX.html  REQ-VALIDATE-SCHEMA.html  SYS-CI.html  SYS-EXCHANGE.html  SYS-REQ.html  SYS-SCAN.html  SYS-VALIDATE.html  index.html
report/source/: index.html
reqs/: core.rqtr  core.yml  sys.rqtr  sys.yml
search/: search_index.json
src/reqtrace/: __init__.py  cli.py  coverage.py  git.py  models.py  parser.py  scanner.py  source_tree.py  visualise.py  visualize.py
src/reqtrace/analysis/: coverage.py  parser.py  (+1 more)
tests/: test_basic.py  test_coverage.py  test_exchange.py  test_parser.py  test_scanner.py  test_validate.py
(+10 files in other folders)
